# hope

./: .gitignore  README.md  README.porting-notes.md  readme
.github/workflows/: ci.yml
claude-docs/: 00-overview.md  01-lexer-parser.md  02-ast-expressions.md  03-type-system.md  04-pattern-compilation.md  05-runtime-krivine.md  06-builtins-io.md  07-module-system.md  08-pretty-printing.md  09-standard-library.md  10-test-suite.md  11-rewrite-roadmap.md  12-claude-workflow.md
cxx/: CMakeLists.txt  CMakePresets.json
cxx/doc/: BAILEY-HOPE-DEFINITION.md  CH1_Exercises_Solutions.md  bailey-book-review.md  bugs-todo-analysis.md  ci-setup.md  examples.md  hope-language-reference.md  hope_tut.md  lambda-and-hope.md  primary-sources.md  ref_man.md  user-guide.md
cxx/src/: CMakeLists.txt  main.cpp
cxx/src/ast/: Ast.hpp
cxx/src/builtins/: Builtins.cpp  Builtins.hpp
cxx/src/lexer/: Lexer.cpp  Lexer.hpp  SourceLocation.hpp  Token.hpp
cxx/src/modules/: ModuleLoader.cpp  ModuleLoader.hpp
cxx/src/parser/: OperatorTable.hpp  ParseError.hpp  Parser.cpp  Parser.hpp
cxx/src/printer/: ExprPrinter.cpp  ExprPrinter.hpp  TypePrinter.cpp  TypePrinter.hpp  ValuePrinter.cpp  ValuePrinter.hpp
cxx/src/repl/: LineEditor.cpp  LineEditor.hpp  Session.cpp  Session.hpp
cxx/src/runtime/: Evaluator.cpp  Evaluator.hpp  RuntimeError.hpp  Value.hpp
cxx/src/types/: Type.hpp  TypeChecker.cpp  TypeChecker.hpp  TypeEnv.cpp  TypeEnv.hpp  TypeError.hpp
cxx/test/: CMakeLists.txt
cxx/test/expected/: arith.out  bailey.out  burstall1980.out  ch1_exercises.out  ctype.out  diag.out  examples_bf.out  examples_boolexp.out  examples_fact.out  examples_fibs.out  functions.out  glaser1984.out  lines.out  list.out  lists.out  maybe.out  products.out  range.out  seq.out  set.out  sort.out  sums.out  tree.out  words.out
cxx/test/integration/: CMakeLists.txt  run_hope_test.cmake
cxx/test/unit/: EvalTest.cpp  LexerTest.cpp  ParserTest.cpp  SessionTest.cpp  TypeTest.cpp
lib/: Standard.hop
src/: defs.h  yyparse.c  yyparse.h
test/: arith.in  bailey.in  burstall1980.in  ch1_exercises.in  ctype.in  diag.in  examples_bf.in  examples_boolexp.in  examples_fact.in  examples_fibs.in  functions.in  glaser1984.in  lines.in  list.in  lists.in  maybe.in  products.in  range.in  seq.in  set.in  sort.in  sums.in  tree.in  words.in
